[package]
name = "rangeross"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
opendal = { version = "0.53.3", default-features = true, features = [
    "services-s3",
    "layers-blocking",
] }
ratatui = "0.29.0"
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
